# zmq_hub

./: LICENSE  README.md  TODO.txt  main.py  pyproject.toml  requirements.txt
backend/: app.py  config.py  events.py  hub.py  logging_config.py  publisher.py  zmq_monitor.py  zmq_proxy.py
backend/static/: app.css  app.js  index.html
examples/: pub.py  sub.py
